<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chanakafernando.sqlitetest.activities.SchoolData">

    <!--<EditText-->
        <!--android:id="@+id/tvSchoolId"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/s_id"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:ems="10"-->
        <!--android:inputType="textPersonName"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/tvSchoolName"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.055" />-->

    <EditText
        android:id="@+id/tvSchoolName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/s_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvDistrict"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/tvDistrict"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/s_district"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/tvAmount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSchoolName"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/tvAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/s_amount"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPhonetic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDistrict"
        app:layout_constraintBottom_toTopOf="@+id/btnSsave"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.055" />


    <Button
        android:id="@+id/btnSsave"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/s_save_button"
        app:layout_constraintBottom_toTopOf="@+id/btnTest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="Test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSsave" />

</android.support.constraint.ConstraintLayout>
